<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg">

    <TextView
        android:id="@+id/tv_hint"
        style="@style/main_tv"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/item_padding_left"
        android:layout_marginTop="@dimen/item_padding_left"
        android:text="@string/select_an_input"
        android:textColor="@color/text_hint_color"
        android:textSize="@dimen/text_size" />

    <com.example.txtledbluetooth.widget.ItemLayout
        android:id="@+id/item_bluetooth"
        style="@style/main_tv"
        android:layout_below="@+id/tv_hint"
        custom:item_bg="@color/item_selected_bg"
        custom:iv_left="@mipmap/icon_bluetooth"
        custom:iv_right="@mipmap/icon_selected"
        custom:text_left_top="@string/bluetooth" />

    <com.example.txtledbluetooth.widget.ItemLayout
        android:id="@+id/item_aux_in"
        style="@style/main_tv"
        android:layout_below="@+id/item_bluetooth"
        custom:iv_left="@mipmap/icon_aux_in_1"
        custom:text_left_top="@string/aux_in" />
</RelativeLayout>
