<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:colorpicker="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    tools:context="com.example.txtledbluetooth.light.EditLightActivity">

    <include
        android:id="@+id/layout_appbar"
        layout="@layout/toolbar" />


    <RelativeLayout
        android:id="@+id/layout_music_pulse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_below="@id/layout_appbar"
        android:layout_marginRight="@dimen/item_padding_left">

        <TextView
            android:id="@+id/tv_switch"
            style="@style/main_tv"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/item_padding_left"
            android:layout_toRightOf="@+id/iv_item_left"
            android:drawableLeft="@mipmap/icon_music_pulse"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:text="@string/pulse_to_music" />

        <Switch
            android:id="@+id/switch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/item_padding_left"
            android:background="@color/item_selected_bg" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/layout_music_pulse"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/tv_chose_color_type"
                style="@style/main_tv"
                android:layout_marginLeft="@dimen/item_padding_left"
                android:layout_marginTop="@dimen/item_padding_left"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableRight="@mipmap/icon_down_arrow"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorAccent" />

            <!--<RelativeLayout-->
                <!--android:id="@+id/layXout_color_picker"-->
                <!--android:layout_width="@dimen/color_picker_size"-->
                <!--android:layout_height="@dimen/color_picker_size"-->
                <!--android:layout_centerHorizontal="true">-->

                <!---->
            <!--</RelativeLayout>-->
            <com.example.txtledbluetooth.widget.ColorPicker
                android:id="@+id/color_picker"
                android:layout_width="@dimen/color_picker_size"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">
            <FrameLayout
                android:id="@+id/fl_color_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/board_height">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view_board1"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board2"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board3"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board4"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board5"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board6"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board7"
                        style="@style/view_color_board" />

                    <View
                        android:id="@+id/view_board8"
                        style="@style/view_color_board" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rg_color_board"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_board1"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board2"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board3"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board4"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board5"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board6"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board7"
                        style="@style/rb_color_board" />

                    <RadioButton
                        android:id="@+id/rb_board8"
                        style="@style/rb_color_board" />
                </RadioGroup>


            </FrameLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_color_rgb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/board_height"
                android:layout_below="@+id/fl_color_board"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:id="@+id/layout_color_rgb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/main_tv"
                            android:text="@string/r" />

                        <EditText
                            android:id="@+id/et_r"
                            style="@style/et_color_board" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/main_tv"
                            android:text="@string/g" />

                        <EditText
                            android:id="@+id/et_g"
                            style="@style/et_color_board" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/main_tv"
                            android:text="@string/b" />

                        <EditText
                            android:id="@+id/et_b"
                            style="@style/et_color_board" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_weight="1"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/main_tv"
                            android:text="@string/well" />

                        <EditText
                            android:id="@+id/et_well"
                            style="@style/et_color_board"
                            android:layout_width="match_parent"
                            android:layout_marginLeft="2dp"
                            android:digits="@string/et_digits"
                            android:maxLength="6"
                            android:paddingRight="@dimen/min_margin" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative_layout_color_rgb"
                android:layout_marginLeft="@dimen/board_height"
                android:layout_marginRight="@dimen/board_height"
                android:layout_marginTop="@dimen/speed_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_decrease_brightness" />

                <SeekBar
                    android:id="@+id/sb_brightness"
                    style="@style/seek_bar"
                    android:progress="100" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_increase_brightness" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_brightness"
                android:layout_marginLeft="@dimen/divide_padding_right"
                android:layout_marginRight="@dimen/board_height"
                android:layout_marginTop="@dimen/speed_margin_top"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/min_margin"
                    android:src="@mipmap/icon_decrease_speed" />

                <SeekBar
                    android:id="@+id/sb_speed"
                    style="@style/seek_bar"
                    android:layout_marginLeft="@dimen/speed_margin_left"
                    android:max="10" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_increase_speed" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
